--- a/Studies/Mutation Sensitivity/bfa-aldp-0.0003966.yml
+++ b/Studies/Mutation Sensitivity/bfa-aldp-0.0003966.yml
@@ -3,8 +3,8 @@
 # Boni Lab
 #
 # BURKINA FASO model configuration for drug policy alterations
-# in which the private market is eliminated in favor of the 
-# recommended therapy plus severe treatments.
+# in which an MFT is implemented for the public market, with the
+# mutation rate adjusted to 5x slower than the status quo.
 #
 # PfPR data for calibration comes from the Malaria Atlas Project
 # projections for 2017.
@@ -174,7 +174,7 @@ immune_system_information:
 
   # Adjust the infliction point in the curve
   midpoint: 0.15
-
+  
 # Settings that determine how long an individual stays in a given location
 circulation_info:
   max_relative_moving_value: 35
@@ -232,11 +232,11 @@ events:
       # Artemisinin
       - day: 2018/1/1
         drug_id: 0
-        mutation_probability: 0.001983
+        mutation_probability: 0.0003966
       # Amodiaquine
       - day: 2018/1/1
         drug_id: 1
-        mutation_probability: 0.001983
+        mutation_probability: 0.0003966
       # Sulfadoxine/pyrimethamine
       - day: 2018/1/1
         drug_id: 2
@@ -244,19 +244,19 @@ events:
       # Chloroquine
       - day: 2018/1/1
         drug_id: 3
-        mutation_probability: 0.001983
+        mutation_probability: 0.0003966
       # Lumefantrine
       - day: 2018/1/1
         drug_id: 4
-        mutation_probability: 0.001983
+        mutation_probability: 0.0003966
       # Piperaquine
       - day: 2018/1/1
         drug_id: 5
-        mutation_probability: 0.001983
+        mutation_probability: 0.0003966
       # Mefloquine
       - day: 2018/1/1
         drug_id: 6
-        mutation_probability: 0.001983
+        mutation_probability: 0.0003966
       # Quinine
       - day: 2018/1/1
         drug_id: 7
@@ -548,11 +548,11 @@ strategy_db:
     therapy_ids: [1, 0, 2, 3, 4, 5, 6, 7, 8]
     distribution: [0.68, 0.025, 0.013, 0.049, 0.124, 0.022, 0.015, 0.056, 0.017]
   1:
-    # AL, DP, AS, QUIN
-    name: BurkinaFaso-Rapid
+    # AL, DP, AS, QUIN, ASMQ, ADQ, CQ, SP
+    name: BurkinaFaso-ALDP
     type: MFT
-    therapy_ids: [1, 3, 5, 7]
-    distribution: [ 0.86, 0.062, 0.022, 0.056]
+    therapy_ids: [1, 3, 5, 7, 2, 4, 6, 8]
+    distribution: [0.377, 0.377, 0.022, 0.056, 0.013, 0.124, 0.015, 0.016] 
 initial_strategy_id: 0
 
 # Days from end of liver-stage infection to appearance of symptoms
